# scooling-lab

./: .gitignore  .museattributes  .museignore  DEPENDENCIES.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CROSS-REPO-STATUS.md  DEPENDENCY-POLICY.md  LEGAL-REVIEW-CHECKLIST.md  ROADMAP.md  SECURITY.md  TRAINING-API-CONTRACT.md  UNSLOTH-LICENSE-EVIDENCE.md
src/scooling_lab/: __init__.py  api.py  bom.py  contracts.py  dataset_review.py  errors.py  fake_worker.py  license_policy.py  provenance.py  retention.py  service.py  state_machine.py  store.py
src/scooling_lab/fixtures/: __init__.py  synthetic_training_dataset.jsonl
tests/: __init__.py  scooling_lab_helpers.py  test_contracts.py  test_data_integrity.py  test_e2e.py  test_integration.py  test_license_policy.py  test_performance.py  test_security.py  test_stress.py  test_t3_data_integrity.py  test_t3_e2e.py  test_t3_integration.py  test_t3_performance.py  test_t3_security.py  test_t3_stress.py  test_t3_unit.py  test_unit.py
